--- a/assets/style/common.less
+++ b/assets/style/common.less
@@ -1,1 +1,13 @@
 @theme: #cccc;
+@fontsmall: 14px;
+@fontbig: 16px;
+@gray-4:  #bfbfbf;
+.font-small {
+    font-size: @fontsmall;
+}
+.font-big {
+    font-size:@fontbig ;
+}
+.font-color {
+    color:@gray-4;
+}
